[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "FRASIER"
authors = [{name = "Sarvesh", email = "prajapati.s@northeastern.edu"}, {name = "James", email = "tukpah.j@northeastern.edu"}, {name = "Stephen", email = "alt.s@northeastern.edu"}]
dynamic = ["version", "description"]
